--- a/publications.html
+++ b/publications.html
@@ -69,10 +69,10 @@ http://themeforest.net/user/owwwlab/
               </li>
               <li><a href="students.html" title="Students"><span>Students</span></a>
               </li>
-              <!--li><a href="teaching.html" title="Teaching"><span>Teaching</span></a>
-              </li-->
-              <li><a href="blog.html" title="Blog"><span>Blog</span></a>
+              <li><a href="teaching.html" title="Teaching"><span>Teaching</span></a>
               </li>
+              <!--li><a href="blog.html" title="Blog"><span>Blog</span></a>
+              </li-->
               <!--li><a href="contact.html" title="Contact"><span>Contact</span></a>
               </li-->
             </ul>
@@ -192,8 +192,22 @@ http://themeforest.net/user/owwwlab/
                       <a href="http://dblp.uni-trier.de/pers/hd/g/Gong:Boqing"><img src="assets/img/publications/series/dblp.png" alt="DBLP" class="pub-thumbnail" height="40" width="40"></a>
                       <p><br></p>
                       <h2 class="title"><u><a href="https://arxiv.org/search/?query=boqing+gong&searchtype=all&source=header">Preprints on ArXiv</a></u></h2>
-                      <h2 class="title"><br>* students I (co-)supervised. <br>= equal contribution among authors. </h2>
                       <h5 class="title"></h5>
+                  </div>
+
+                  <div class="tl-item active pub-item with-thumb"><span class="item-section">After 2022</span>
+                    <h3 class="title"><br><br><br>&nbsp;&nbsp;&nbsp;&nbsp;Please see <a href="https://scholar.google.com/citations?hl=en&user=lv9ZeVUAAAAJ&view_op=list_works&sortby=pubdate" style="color:blue">this page on Google Scholar</a></h3>
+                  </div>
+
+                  <div class="tl-item active pub-item with-thumb"><span class="item-section">2022</span>
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICLR</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">When Vision Transformers Outperform ResNets without Pre-training or Strong Data Augmentations</h3>
+                      <div class="description">
+                        <div class="citation"><span>International Conference on Learning Representations <b>(ICLR)</b>, 2022 <b><font color="blue">(Spotlight) </font></b><span class="block-elem">X Chen, C-J Hsieh, and <b>B Gong</b></span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://openreview.net/pdf?id=LtKcMgGOeLt">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/2106.01548">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://openreview.net/forum?id=LtKcMgGOeLt">Openreview</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/google-research/vision_transformer">Model checkpoints</a> ] </font>
+                      </div>
+                    </div>
                   </div>
 
                   <div class="tl-item active pub-item with-thumb"><span class="item-section">2022</span>
