--- a/students.html
+++ b/students.html
@@ -69,10 +69,10 @@ http://themeforest.net/user/owwwlab/
               </li>
               <li class="current-menu-item"><a href="students.html" title="Students"><span>Students</span></a>
               </li>
-              <!--li><a href="teaching.html" title="Teaching"><span>Teaching</span></a>
-              </li-->
-              <li><a href="blog.html" title="Blog"><span>Blog</span></a>
+              <li><a href="teaching.html" title="Teaching"><span>Teaching</span></a>
               </li>
+              <!--li><a href="blog.html" title="Blog"><span>Blog</span></a>
+              </li-->
               <!--li><a href="contact.html" title="Contact"><span>Contact</span></a>
               </li-->
             </ul>
@@ -90,15 +90,17 @@ http://themeforest.net/user/owwwlab/
         </div>
       </header>
       <!-- #####End Header-->
+      
       <!-- #####Begin contents-->
       <section id="contents">
+
         <!-- #####Begin page head-->
         <div class="page-head h-400 ov-grad8-alpha-80 center-it parallax-layer dark" data-img-src="assets/img/bg/04.jpg" data-parallax-mode="mode-title">
           <div class="container">
             <div class="tb-vcenter-wrapper">
               <div class="title-wrapper vcenter">
-                <h1 class="title">Research Group</h1>
-                <h2 class="description"><b>This page features my former students while I was at UCF.</b><br></h2>
+                <h1 class="title">Research Group at BU</h1>
+                <h2 class="description"><b>This page features my students at Boston University.</b><br></h2>
               </div>
               <div class="breadcrumb-wrapper vcenter">
                 <ul class="breadcrumb">
@@ -111,8 +113,65 @@ http://themeforest.net/user/owwwlab/
             </div>
           </div>
         </div>
-        <!-- #####End page head
-        -->
+        <!-- #####End page head-->
+        <section class="page-contents">
+          <!-- #####Begin main area-->
+          <section id="main-area">
+            <section class="section section-narrow slim-container bg-gray">
+              <div class="container">
+                <div class="row multi-columns-row pull-up-160 col-margin-bottom-40">
+                  <div class="col-xs-6 col-md-4">
+                    <div class="vc-card boxed"><a href="#"><img src="assets/img/people/yuwen.jpg" alt="people"></a>
+                      <div class="vc-card-wrapper"><a href="#" class="title">Yuwen Tan</a>
+                        <div class="subtitle">Ph.D. student, 2024-</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-6 col-md-4">
+                    <div class="vc-card boxed"><a href="#"><img src="assets/img/people/victor.png" alt="people"></a>
+                      <div class="vc-card-wrapper"><a href="https://scholar.google.com/citations?user=9dFr77YAAAAJ&hl=en" class="title">Zecheng (Victor) Wang</a>
+                        <div class="subtitle">Ph.D. student, 2024-</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-6 col-md-4">
+                    <div class="vc-card boxed"><a href="#"><img src="assets/img/people/wenqi.jpg" alt="people"></a>
+                      <div class="vc-card-wrapper"><a href="#" class="title">Wenqi Wang</a>
+                        <div class="subtitle">Ph.D. student, 2024-</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-6 col-md-4">
+                    <div class="vc-card boxed"><a href="#"><img src="assets/img/people/shawn.png" alt="people"></a>
+                      <div class="vc-card-wrapper"><a href="#" class="title">Shengao (Shawn) Wang</a>
+                        <div class="subtitle">Ph.D. student co-supervised with Venkatesh Saligrama, 2024-</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+        
+        <!-- #####Begin page head-->
+        <div class="page-head h-400 ov-grad8-alpha-80 center-it parallax-layer dark" data-img-src="assets/img/bg/04.jpg" data-parallax-mode="mode-title">
+          <div class="container">
+            <div class="tb-vcenter-wrapper">
+              <div class="title-wrapper vcenter">
+                <h1 class="title">Research Group at UCF</h1>
+                <h2 class="description"><b>This page features my former students while I worked at University of Central Florida.</b><br></h2>
+              </div>
+              <div class="breadcrumb-wrapper vcenter">
+                <ul class="breadcrumb">
+                  <li><a href="#"><i class="oli oli-home"></i></a></li>
+                  <li><a href="#">publication</a></li>
+                  <li><a href="#">publication type</a></li>
+                  <li>learning environment</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- #####End page head-->
         <section class="page-contents">
           <!-- #####Begin main area-->
           <section id="main-area">
@@ -129,8 +188,8 @@ http://themeforest.net/user/owwwlab/
                   </div>
                   <div class="col-xs-6 col-md-4">
                     <div class="vc-card boxed"><a href="#"><img src="assets/img/people/yang.jpg" alt="people"></a>
-                      <div class="vc-card-wrapper"><a href="https://scholar.google.com/citations?user=9dFr77YAAAAJ&hl=en" class="title">Yang Zhang</a>
-                        <div class="subtitle"><font color="blue">Congrats, Dr. Yang!</font> 2015-2020 <br> He uses simulation for real. <br>(2018-2020, co-supervised w/ Hassan Foroosh)</div>
+                      <div class="vc-card-wrapper"><a href="https://scholar.google.com/citations?user=9dFr77YAAAAJ&hl=en" class="title">Dr. Yang Zhang</a>
+                        <div class="subtitle">2015-2020 <br> He uses simulation for real. <br>(2018-2020, co-supervised w/ Hassan Foroosh)</div>
                       </div>
                       <!--div class="links"><a href="#" data-toggle="tooltip" data-original-title="homepage"><i class="fa fa-external-link"></i></a><a href="#" data-toggle="tooltip" data-original-title="Biography"><i class="oli oli-user_male_circle"></i></a><a href="#" data-toggle="tooltip" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div-->
                     </div>
@@ -138,31 +197,31 @@ http://themeforest.net/user/owwwlab/
                   <div class="col-xs-6 col-md-4">
                     <div class="vc-card boxed"><a href="#"><img src="assets/img/people/aidean.jpg" alt="people"></a>
                       <div class="vc-card-wrapper"><a href="#" class="title">Aidean Sharghi</a>
-                        <div class="subtitle">PhD student, 2015--017<br> He summarizes videos.<br></div>
+                        <div class="subtitle">PhD student, 2015-2017<br> He summarizes videos.<br></div>
                       </div>
                       <!--div class="links"><a href="#" data-toggle="tooltip" data-original-title="homepage"><i class="fa fa-external-link"></i></a><a href="#" data-toggle="tooltip" data-original-title="Biography"><i class="oli oli-user_male_circle"></i></a><a href="#" data-toggle="tooltip" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div-->
                     </div>
                   </div>
                   <div class="col-xs-6 col-md-4">
                     <div class="vc-card boxed"><a href="#"><img src="assets/img/people/yandong.jpg" alt="people"></a>
-                      <div class="vc-card-wrapper"><a href="#" class="title">Yandong Li</a>
-                        <div class="subtitle">PhD student, 2017-<br> He reinforces sequential models.<br>(2018--, co-supervised w/ Liqiang Wang)</div>
+                      <div class="vc-card-wrapper"><a href="#" class="title">Dr. Yandong Li</a>
+                        <div class="subtitle">2017-2021<br> He reinforces sequential models.<br>(2018-2021, co-supervised w/ Liqiang Wang)</div>
                       </div>
                       <!--div class="links"><a href="#" data-toggle="tooltip" data-original-title="homepage"><i class="fa fa-external-link"></i></a><a href="#" data-toggle="tooltip" data-original-title="Biography"><i class="oli oli-user_male_circle"></i></a><a href="#" data-toggle="tooltip" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div-->
                     </div>
                   </div>
                   <div class="col-xs-6 col-md-4">
                     <div class="vc-card boxed"><a href="#"><img src="assets/img/people/jamal.jpg" alt="people"></a>
-                      <div class="vc-card-wrapper"><a href="#" class="title">Muhammad Abdullah Jamal</a>
-                        <div class="subtitle">PhD student, 2016-<br> He detects faces.<br>(2018-, co-supervised w/ Guojun Qi)</div>
+                      <div class="vc-card-wrapper"><a href="#" class="title">Dr. Muhammad Abdullah Jamal</a>
+                        <div class="subtitle">2016-2021<br> He detects faces.<br>(2018-2021, co-supervised w/ Guojun Qi)</div>
                       </div>
                       <!--div class="links"><a href="#" data-toggle="tooltip" data-original-title="homepage"><i class="fa fa-external-link"></i></a><a href="#" data-toggle="tooltip" data-original-title="Biography"><i class="oli oli-user_male_circle"></i></a><a href="#" data-toggle="tooltip" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div-->
                     </div>
                   </div>
                   <div class="col-xs-6 col-md-4">
                     <div class="vc-card boxed"><a href="#"><img src="assets/img/people/yifan.jpg" alt="people"></a>
-                      <div class="vc-card-wrapper"><a href="#" class="title">Yifan Ding</a> 
-                        <div class="subtitle">PhD student, 2015-<br>She learns with weak supervision.<br>(2018-, co-supervised w/ Liqiang Wang)</div>
+                      <div class="vc-card-wrapper"><a href="#" class="title">Dr. Yifan Ding</a> 
+                        <div class="subtitle">2015-2023<br>She learns with weak supervision.<br>(2018-2023, co-supervised w/ Liqiang Wang)</div>
                       </div>
                       <!--div class="links"><a href="#" data-toggle="tooltip" data-original-title="homepage"><i class="fa fa-external-link"></i></a><a href="#" data-toggle="tooltip" data-original-title="Biography"><i class="oli oli-user_male_circle"></i></a><a href="#" data-toggle="tooltip" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div-->
                     </div>
