--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
               </div>
             </section>
-            <section class="bg-gray no-space-grid">
+            <!--section class="bg-gray no-space-grid">
               <div class="container">
                 <div class="row extend-bg-wrapper no-space-grid h-500">
                   <div class="col-md-4">
@@ -193,14 +193,14 @@
                         <li>2017</li>
                         <li>2016</li>
                         <li>2015</li>
-                        <!--li>1998</li>
+                        <li>1998</li>
                         <li>2000</li>
                         <li>2005</li>
                         <li>2006</li>
                         <li>2008</li>
                         <li>2010</li>
                         <li>2013</li>
-                        <li>2015</li-->
+                        <li>2015</li>
                       </ul>
                       <div class="tl-content">
 
@@ -279,9 +279,9 @@
                         <div class="tl-item">
                           <h5 class="title">Nine Papers Published in 2018</h5>
                           <div class="description"> 
-                            <!--p>
+                            <p>
                               on NeurIPS (1), IEEE CVPR (3), ECCV (2), ICLR (1), ACM TOMM (1), and IEEE WACV (1), respectively.
-                            </p-->
+                            </p>
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="publications.html"><i class="icon oi-forward"></i><span>read more</span></a>
                           </div>
                           <h5 class="title">12/2018: Talk at IEEE BIGDATA Workshop on Big Data Transfer Learning</h5>
@@ -409,7 +409,7 @@
                   </div>
                 </div>
               </div>
-            </section>
+            </section-->
             <section class="section bg-gray section-narrow-2">
               <div class="container">
                 <div class="row">
