--- a/research.html
+++ b/research.html
@@ -69,10 +69,10 @@ http://themeforest.net/user/owwwlab/
               </li>
               <li><a href="students.html" title="Students"><span>Students</span></a>
               </li>
-              <!--li><a href="teaching.html" title="Teaching"><span>Teaching</span></a>
-              </li-->
-              <li><a href="blog.html" title="Blog"><span>Blog</span></a>
+              <li><a href="teaching.html" title="Teaching"><span>Teaching</span></a>
               </li>
+              <!--li><a href="blog.html" title="Blog"><span>Blog</span></a>
+              </li-->
               <!--li><a href="contact.html" title="Contact"><span>Contact</span></a>
               </li-->
             </ul>
