--- a/teaching.html
+++ b/teaching.html
@@ -109,7 +109,7 @@ http://themeforest.net/user/owwwlab/
 
                   <div class="tl-item active pub-item with-thumb"><span class="item-section">2024</span>
                     <div class="content-wrapper">
-                      <h3 class="title"><br><br><br>&nbsp;&nbsp;&nbsp;&nbsp;Fall at Boston University: <a href="https://sites.google.com/bu.edu/cs542fall2024" style="color:blue">CS 542: Principles of Machine Learning</a></h3>
+                      <h3 class="title"><br><br><br>&nbsp;&nbsp;&nbsp;&nbsp;Fall at Boston University: <a href="https://sites.google.com/bu.edu/cs542fall2024" style="color:blue">CS 542: Principles of Machine Learning</a> (Co-taught with Kate Saenko) </h3>
                     </div>
                   </div>
 
