--- a/index.html
+++ b/index.html
@@ -140,10 +140,13 @@
                 <div class="row">
                   <div class="col-md-9">
                     <h3 class="with-sideline">Biography</h3>
-                    <p>Boqing Gong is a computer science faculty member at Boston University and a part-time research scientist at Google. His research on machine learning and computer vision focuses on visual recognition, video, and AI models' safety, generalization, and efficiency. Boqing has served as an Associate Editor for IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI) since 2024 and a program co-chair for IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) in 2023.<br><br></p>
+                    <p>Boqing Gong is a computer science faculty member at Boston University and a part-time research scientist at Google. His research on machine learning and computer vision focuses on visual recognition, video, and AI models' safety, generalization, and efficiency. Boqing has served as an Associate Editor for IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI) since 2024 and a program co-chair for IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) in 2023.</p>
+
+                    <p style="color: blue;">@Prospective students: I will <b>not</b> admit any PhD students in Fall 2025 unless you are incredibly outstanding.</p> 
+
 
                     <h3 class="with-sideline">Services</h3>
-                    <p><b>Associate editor</b> for PAMI and TMLR. <b>Program co-chair</b> for WACV'23. <b>Tutorial co-chair</b> for CVPR'22, <b>Senior Area chair or Area Chair</b> for CVPR, ECCV, ICML, NeurIPS, ICLR, ICCV, AISTATS, WACV, and AAAI. <b>NSF Panelist</b>.</p>
+                    <p><b>Associate editor</b> for PAMI and TMLR. <b>Program co-chair</b> for WACV'23. <b>Workshop co-chair</b> for ICCV'25. <b>Tutorial co-chair</b> for CVPR'22 and '25, <b>Senior Area chair or Area Chair</b> for CVPR, ECCV, ICML, NeurIPS, ICLR, ICCV, AISTATS, WACV, and AAAI. <b>NSF Panelist</b>.</p>
                     <p>CVPR'17, '21 Outstanding Reviewer</p>
                     <!--br><br>
                     <p> <font color="black">Curious about <i>sequential determinantal point processes?</i> Come to <u><a href="https://rpand002.github.io/cvpr19_sumt.html"><font color="blue"> our CVPR tutorial</font> </a></u> on June 16, 2019.</font>  </p>
