--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <h3 class="with-sideline">Biography</h3>
                     <p>Boqing Gong is a computer science faculty member at Boston University and a part-time research scientist at Google. His research on machine learning and computer vision focuses on visual recognition, video, and AI models' safety, generalization, and efficiency. Boqing has served as an Associate Editor for IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI) since 2024 and a program co-chair for IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) in 2023.</p>
 
-                    <p style="color: blue;">@Prospective students: I will <b>not</b> admit any PhD students in Fall 2025 unless you are incredibly outstanding.</p> 
+                    <p style="color: blue;">@Prospective students: I'm <b>not</b> admitting any PhD students in 2026 unless you are incredibly outstanding.</p> 
 
 
                     <h3 class="with-sideline">Services</h3>
